tableViewCells go to different pages depending on odd/even

--- a/X-ray Analysis/Base.lproj/Main.storyboard
+++ b/X-ray Analysis/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rx1-NI-34W">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rx1-NI-34W">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -83,10 +83,10 @@ We also store your previous uploads on our encryted cloud server so you can secu
             </objects>
             <point key="canvasLocation" x="4384" y="-267"/>
         </scene>
-        <!--X-plain My X-ray-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="X-plain My X-ray" id="BYZ-38-t0r" customClass="ViewController" customModule="X_ray_Analysis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Home" id="BYZ-38-t0r" customClass="ViewController" customModule="X_ray_Analysis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -181,9 +181,6 @@ You can also access previes reports below.</string>
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="Htq-V3-O5j" kind="show" id="jL4-yt-BdS"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -200,27 +197,27 @@ You can also access previes reports below.</string>
         <!--View Controller-->
         <scene sceneID="cKj-ZA-pUW">
             <objects>
-                <viewController id="Htq-V3-O5j" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="vc1" id="Htq-V3-O5j" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lUL-EQ-iRt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xray2" translatesAutoresizingMaskIntoConstraints="NO" id="y2i-Qf-w2i">
-                                <rect key="frame" x="50" y="138" width="314" height="400"/>
+                                <rect key="frame" x="50" y="94" width="314" height="400"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="400" id="Bcf-Ou-DI9"/>
                                     <constraint firstAttribute="height" constant="400" id="K5H-ud-ciQ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gfd-rb-1Bb">
-                                <rect key="frame" x="30" y="568" width="354" height="244"/>
+                                <rect key="frame" x="30" y="524" width="354" height="288"/>
                                 <string key="text">These findings are suspicious for aspiration pneumonia given the clinical history. Left lung is relatively clear. there is a right ij central venous line with distal lead tip in the distal svc. cardiac silhouette is within normal limits.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X-plain My X-ray" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fP2-KL-AGq">
-                                <rect key="frame" x="10" y="98" width="394" height="21"/>
+                                <rect key="frame" x="10" y="54" width="394" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="nKx-Qt-SvA"/>
                                 </constraints>
@@ -429,6 +426,59 @@ You can also access previes reports below.</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mg9-Mw-IBg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3567" y="-267"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Z9M-VK-Ai7">
+            <objects>
+                <viewController storyboardIdentifier="vc2" id="u2h-1o-Fc3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d3k-bS-JDV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="50" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xtv-u8-RL0">
+                                <rect key="frame" x="30" y="640" width="354" height="122"/>
+                                <string key="text">The lungs are well-expanded and clear, noting chronic elevation of the right hemidiaphragm. no pleural abnormality. Heart size is normal. Cardiomediastinal hilar silhouettes are unremarkable. Median sternotomy wires are midline and intact.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xray1" translatesAutoresizingMaskIntoConstraints="NO" id="SbW-n2-AXf">
+                                <rect key="frame" x="50" y="94" width="314" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="1Yf-dw-KnJ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X-plain My X-ray" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6EP-za-pKO">
+                                <rect key="frame" x="10" y="54" width="394" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="8Bq-mM-If2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zBj-ej-G8f"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6EP-za-pKO" firstAttribute="leading" secondItem="d3k-bS-JDV" secondAttribute="leading" constant="10" id="4KW-ta-Efd"/>
+                            <constraint firstItem="SbW-n2-AXf" firstAttribute="leading" secondItem="zBj-ej-G8f" secondAttribute="leading" constant="50" id="9J3-og-bMu"/>
+                            <constraint firstItem="SbW-n2-AXf" firstAttribute="top" secondItem="zBj-ej-G8f" secondAttribute="top" constant="50" id="BcC-jC-2Os"/>
+                            <constraint firstItem="6EP-za-pKO" firstAttribute="top" secondItem="zBj-ej-G8f" secondAttribute="top" constant="10" id="c75-ag-nNE"/>
+                            <constraint firstItem="zBj-ej-G8f" firstAttribute="trailing" secondItem="6EP-za-pKO" secondAttribute="trailing" constant="10" id="hXR-7t-tHQ"/>
+                            <constraint firstItem="zBj-ej-G8f" firstAttribute="trailing" secondItem="SbW-n2-AXf" secondAttribute="trailing" constant="50" id="lHq-Mc-gMf"/>
+                            <constraint firstItem="Xtv-u8-RL0" firstAttribute="leading" secondItem="zBj-ej-G8f" secondAttribute="leading" constant="30" id="soq-FB-Fyg"/>
+                            <constraint firstItem="zBj-ej-G8f" firstAttribute="bottom" secondItem="Xtv-u8-RL0" secondAttribute="bottom" constant="100" id="vAH-mf-6e5"/>
+                            <constraint firstItem="zBj-ej-G8f" firstAttribute="trailing" secondItem="Xtv-u8-RL0" secondAttribute="trailing" constant="30" id="zHm-K2-oyo"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="aqy-Tv-4Gl">
+                        <barButtonItem key="rightBarButtonItem" title="Home" id="0eT-2B-cOb"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ibl-BG-XEA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7183" y="434"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
